测试报告去掉时间戳

--- a/report/result.html
+++ b/report/result.html
@@ -189,9 +189,9 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2018-12-04 10:23:45</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:39.405000</p>
-<p class='attribute'><strong>Status:</strong> Pass 2</p>
+<p class='attribute'><strong>Start Time:</strong> 2018-12-06 15:40:25</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:42.871000</p>
+<p class='attribute'><strong>Status:</strong> Pass 1 Failure 1 Error 1</p>
 
 <p class='description'>测试用例执行情况： </p>
 </div>
@@ -221,31 +221,47 @@ function showOutput(id, name) {
     <td>View</td>
 </tr>
 
-<tr class='passClass'>
+<tr class='failClass'>
     <td>test_add.TestAddSupplier: 添加供应商测试用例</td>
     <td>1</td>
-    <td>1</td>
     <td>0</td>
+    <td>1</td>
     <td>0</td>
     <td><a href="javascript:showClassDetail('c1',1)">Detail</a></td>
 </tr>
 
-<tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_add: 添加供应商test003</div></td>
+<tr id='ft1.1' class='none'>
+    <td class='failCase'><div class='testcase'>test_add: 添加供应商test003</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.1')" >
-        pass</a>
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.1')" >
+        fail</a>
 
-    <div id='div_pt1.1' class="popup_window">
+    <div id='div_ft1.1' class="popup_window">
         <div style='text-align: right; color:red;cursor:pointer'>
-        <a onfocus='this.blur();' onclick="document.getElementById('div_pt1.1').style.display = 'none' " >
+        <a onfocus='this.blur();' onclick="document.getElementById('div_ft1.1').style.display = 'none' " >
            [x]</a>
         </div>
         <pre>
         
-pt1.1: 
+ft1.1: Traceback (most recent call last):
+  File "D:\autopro\testcase\test_add.py", line 22, in test_add
+    self.assertEqual(t, "test003")
+AssertionError: 'test003456' != 'test003'
+- test003456
+?        ---
++ test003
+
+Traceback (most recent call last):
+  File "D:\autopro\testcase\test_add.py", line 22, in test_add
+    self.assertEqual(t, "test003")
+AssertionError: 'test003456' != 'test003'
+- test003456
+?        ---
++ test003
+
+
 
         </pre>
     </div>
@@ -287,12 +303,73 @@ pt2.1:
     </td>
 </tr>
 
+<tr class='errorClass'>
+    <td>unittest.loader._FailedTest</td>
+    <td>1</td>
+    <td>0</td>
+    <td>0</td>
+    <td>1</td>
+    <td><a href="javascript:showClassDetail('c3',1)">Detail</a></td>
+</tr>
+
+<tr id='ft3.1' class='none'>
+    <td class='errorCase'><div class='testcase'>test_login</div></td>
+    <td colspan='5' align='center'>
+
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft3.1')" >
+        error</a>
+
+    <div id='div_ft3.1' class="popup_window">
+        <div style='text-align: right; color:red;cursor:pointer'>
+        <a onfocus='this.blur();' onclick="document.getElementById('div_ft3.1').style.display = 'none' " >
+           [x]</a>
+        </div>
+        <pre>
+        
+ft3.1: ImportError: Failed to import test module: test_login
+Traceback (most recent call last):
+  File "C:\Python36\lib\unittest\loader.py", line 428, in _find_test_path
+    module = self._get_module_from_name(name)
+  File "C:\Python36\lib\unittest\loader.py", line 369, in _get_module_from_name
+    __import__(name)
+  File "D:\autopro\testcase\test_login.py", line 14, in &lt;module&gt;
+    data = ExcelUtil(file_path, sheet_name)
+  File "D:\autopro\common\read_excel.py", line 7, in __init__
+    self.data = xlrd.open_workbook(excel_path)
+  File "C:\Python36\lib\site-packages\xlrd\__init__.py", line 116, in open_workbook
+    with open(filename, "rb") as f:
+FileNotFoundError: [Errno 2] No such file or directory: 'testdata.xlsx'
+
+ImportError: Failed to import test module: test_login
+Traceback (most recent call last):
+  File "C:\Python36\lib\unittest\loader.py", line 428, in _find_test_path
+    module = self._get_module_from_name(name)
+  File "C:\Python36\lib\unittest\loader.py", line 369, in _get_module_from_name
+    __import__(name)
+  File "D:\autopro\testcase\test_login.py", line 14, in &lt;module&gt;
+    data = ExcelUtil(file_path, sheet_name)
+  File "D:\autopro\common\read_excel.py", line 7, in __init__
+    self.data = xlrd.open_workbook(excel_path)
+  File "C:\Python36\lib\site-packages\xlrd\__init__.py", line 116, in open_workbook
+    with open(filename, "rb") as f:
+FileNotFoundError: [Errno 2] No such file or directory: 'testdata.xlsx'
+
+
+
+        </pre>
+    </div>
+    <!--css div popup end-->
+
+    </td>
+</tr>
+
 <tr id='total_row'>
     <td>Total</td>
-    <td>2</td>
-    <td>2</td>
-    <td>0</td>
-    <td>0</td>
+    <td>3</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
     <td>&nbsp;</td>
 </tr>
 </table>
